# niuc-final

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml  tasks.py
.github/workflows/: ci.yml
bench/: __init__.py  run_eval.py  test_guard_bench.py
bench/cases/: benign_only.json  mixed.json
docs/: index.md
examples/: basic_usage.py
scripts/: pull_datasets.py  run_demo.py
src/pccniuc/: __init__.py  _version.py  arbiter.py  cli.py  demo.py  guard.py  llm_client.py  metrics.py  pipeline.py  policy.py  provenance.py  sanitizer.py
tests/: conftest.py  test_cli.py  test_guard.py  test_pipeline.py  test_policy.py  test_run_eval.py  test_sanitizer.py
